2004-10-15 Alain Magloire
	Adjustment to changes in CDI interface concerning breakpoints.
	Now the thread ids for a breakpoint is specified in the ICDICondition.
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDICondition.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIBreakpoint.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIBreakpointManagement.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDITarget.java

	* CBreakpointManager.java
	* CDebugTarget.java

2004-10-14 Mikhail Khodjaiants
	Partial fix for bug 39936 GDB hits modified conditional breakpoints when condition not satisfied.
	Condition has to be set at the mi level.
	* CBreakpointManager.java

2004-10-08 Mikhail Khodjaiants
	Added the launch configuration preference for the register bookkeeping.
	* ICDTLaunchConfigurationConstants.java
	* CExpression.java
	* CRegister.java
	* CRegisterGroup.java
	* CVariable.java

2004-10-08 Mikhail Khodjaiants
	Added the bookkeeping of registers and register groups.
	* ICVariable.java
	* IEnableDisableTarget.java: new
	* AbstractCVariable.java
	* CRegister.java
	* CRegisterGroup.java

2004-10-07 Mikhail Khodjaiants
	Pass the current stack frame to the registers manager to provide the evaluation context.
	* ICRegisterManager.java
	* IDummyStackFrame.java
	* CRegisterManager.java
	* CDebugTarget.java
	* CDummyStackFrame.java
	* CRegisterGroup.java
	* CStackFrame.java

2004-10-07 Mikhail Khodjaiants
	Provide a context for expression evaluation.
	* ICValue.java
	* AbstractCValue.java
	* CArrayPartitionValue.java
	* CValue.java

2004-10-06 Mikhail Khodjaiants
	Added the "getType" method to ICValue.
	* ICValue.java
	* AbstractCValue.java
	* CArrayPartitionValue.java
	* CValue.java

2004-09-30 Mikhail Khodjaiants
	Implementing adapters for the platform's Memory view.
	* CExtendedMemoryBlockRetrieval.java: new
	* CDebugTarget.java
	* CExtendedMemoryBlock.java: new
	* CThread.java
	* InternalDebugCoreMessages.properties

2004-09-29 Mikhail Khodjaiants